Test PlanetsTest and StarDustTest randomized and generalized